    Fixed an issue where column resizing using the resize bars was inconsistent between fixed and relative table widths #TINY-6001
    Fixed an issue where dragging and dropping within a table would select table cells #TINY-5950
    Fixed up and down keyboard navigation not working for inline `contenteditable="false"` elements #TINY-6226
    Fixed the `unlink` toolbar button not working when selecting multiple links #TINY-4867
    Fixed the `link` dialog not showing the "Text to display" field in some valid cases #TINY-5205
    Fixed pressing escape not focusing the editor when using multiple toolbars #TINY-6230
Version 5.4.2 (TBD)
    Fixed clicking on notifications causing inline editors to hide #TINY-6058
    Fixed a regression where the `anchor_top` and `anchor_bottom` settings weren't working when set to `false` #TINY-6256
    Fixed an exception thrown when positioning the context toolbar on Internet Explorer 11 in some edge cases #TINY-6271
    Fixed list toolbar buttons not showing as active when a list is selected #TINY-6286
Version 5.4.1 (2020-07-08)
    Fixed the Search and Replace plugin incorrectly including zero-width caret characters in search results #TINY-4599
    Fixed dragging and dropping unsupported files navigating the browser away from the editor #TINY-6027
    Fixed undo levels not created on browser handled drop or paste events #TINY-6027
    Fixed content in an iframe element parsing as DOM elements instead of text content #TINY-5943
    Fixed Oxide checklist styles not showing when printing #TINY-5139
    Fixed bug with `scope` attribute not being added to the cells of header rows #TINY-6206
Version 5.4.0 (2020-06-30)
    Added keyboard navigation support to menus and toolbars when the editor is in a ShadowRoot #TINY-6152
    Added the ability for menus to be clicked when the editor is in an open shadow root #TINY-6091